--- a/.github/workflows/release_tests.yml
+++ b/.github/workflows/release_tests.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install from PyPI
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install --use-feature=2020-resolver pyhf[backends,xmlio]
-        python -m pip install 'pytest~=3.5' pytest-cov
+        python -m pip install --no-cache-dir --use-feature=2020-resolver pyhf[backends,xmlio]
+        python -m pip install --no-cache-dir 'pytest~=3.5' pytest-cov
         python -m pip list
     - name: Canary test public API
       run: |
