--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install --ignore-installed -U -q --no-cache-dir -e .[test]
+        python -m pip install --ignore-installed -U -q --no-cache-dir --use-feature=2020-resolver -e .[test]
         python -m pip list
     - name: Test with pytest
       run: |
@@ -61,7 +61,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install --ignore-installed -U -q --no-cache-dir -e .[complete]
+        python -m pip install --ignore-installed -U -q --no-cache-dir --use-feature=2020-resolver -e .[complete]
         python -m pip list
     - name: Test example notebooks
       run: |
@@ -85,7 +85,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install --ignore-installed -U -q --no-cache-dir -e .[docs,test]
+        python -m pip install --ignore-installed -U -q --no-cache-dir --use-feature=2020-resolver -e .[docs,test]
         python -m pip list
         sudo apt-get update
         sudo apt-get -qq install pandoc
